--- a/app/views/gist/home.html.erb
+++ b/app/views/gist/home.html.erb
@@ -1,5 +1,31 @@
 <h1>Liste Gist</h1>
 <a href="/gist/add" class="button">Ajouter</a>
+<div class="large-offset-3">
+  <div class="row">
+    <div class="large-9">
+    <%= form_tag "/gist", method: "post" do %>
+        <div class="row">
+          <div class="small-3 columns">
+            <label for="category" class="text-right middle">Categories :</label>
+          </div>
+          <div class="small-5">
+            <select name="category" id="category">
+              <% @categories.each do |category| %>
+                  <option value="<%= category.id%>"><%= category.name %></option>
+              <% end %>
+            </select>
+          </div>
+          <div class="small-3" style="margin-left: 20px">
+            <input class="button success" type="submit">
+          </div>
+        </div>
+    <% end %>
+    </div>
+    <div class="large-3">
+      <a href="/"><button class="alert button">Reset</button></a>
+    </div>
+  </div>
+</div>
 <table class="large-6 large-offset-3">
   <thead>
   <tr>
