MAJ Readme with instruction

--- a/app/views/gist/index.html.erb
+++ b/app/views/gist/index.html.erb
@@ -3,7 +3,7 @@
       <label for="name">Nom du gist :</label>
       <input type="text" name="name" id="name" placeholder="ex. Index.php">
       <label for="id_gist">Id du gist :</label>
-      <input type="text" name="id_gist" id="id_gist" placeholder="ex.">
+      <input type="text" name="id_gist" id="id_gist" placeholder="ex. 47601c9bd553750e0dce">
       <div class="row">
         <div class="small-3 columns">
           <label for="category" class="text-right middle">Categories :</label>
