--- a/app/views/gist/home.html.erb
+++ b/app/views/gist/home.html.erb
@@ -1,8 +1,11 @@
-<h1>Liste Gist</h1>
+<div class="large-offset-3">
+  <h1>Liste Gist</h1>
 <a href="/gist/add" class="button">Ajouter</a>
+  <a href="/logout" class="alert button">Deconnexion</a>
+</div>
 <div class="large-offset-3">
   <div class="row">
-    <div class="large-9">
+    <div class="large-6">
       <%= form_tag "/gist", method: "post" do %>
           <div class="row">
             <div class="small-3 columns">
