#15 Change color button

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,8 +8,8 @@
       Email: <%= f.text_field :email %>
       Password: <%= f.password_field :password %>
       Password Confirmation: <%= f.password_field :password_confirmation %>
-      <input class="button success" type="submit">
+      <input class="button" type="submit" value="S'inscrire">
 
-      <a href="/login"><button class="button">Connexion</button></a>
+      <a href="/login"><button class="button" style="float: right;">Sec connecter</button></a>
   <% end %>
 </div>
