--- a/app/views/gist/index.html.erb
+++ b/app/views/gist/index.html.erb
@@ -7,7 +7,7 @@
       <label for="name">Nom du gist :</label>
       <input type="text" name="name" id="name" placeholder="ex. Index.php">
       <label for="id_gist">Id du gist :</label>
-      <h5><small>https://gist.github.com/username/<span style="color: #5f5f5fg">6b99b9cceba1082f8b18</span></small></h5>
+      <h5><small>https://gist.github.com/username/<span style="color: #5f5f5f">6b99b9cceba1082f8b18</span></small></h5>
       <input type="text" name="id_gist" id="id_gist" placeholder="ex. 6b99b9cceba1082f8b18">
       <div class="row">
         <div class="small-3 columns">
