--- a/app/views/gist/index.html.erb
+++ b/app/views/gist/index.html.erb
@@ -10,7 +10,7 @@
       <h5><small>https://gist.github.com/username/<span style="color: #5f5f5f">6b99b9cceba1082f8b18</span></small></h5>
       <input type="text" name="id_gist" id="id_gist" placeholder="ex. 6b99b9cceba1082f8b18">
       <div class="row">
-        <div class="small-3 columns">
+        <div class="smallg-3 columns">
           <label for="category" class="text-right middle">Categories :</label>
         </div>
         <div class="small-5">
@@ -21,7 +21,6 @@
           </select>
         </div>
       </div>
-
       <input type="submit" class="button">
   <% end %>
 </div>
